style(fix): fix buttons gap

--- a/css/general.css
+++ b/css/general.css
@@ -50,7 +50,7 @@ button:disabled {
     padding: 5px 10px;
 
     & + & {
-      margin-left: 10px;
+      margin-left: 5px;
     }
 
     &:disabled {
